design branch commit 1
add skeleton framework for splash page
change some html to facilitate what i’ve got in mind
(email if you disagree, i’ve tried to stay away from non semantic html)

--- a/index.html
+++ b/index.html
@@ -5,54 +5,51 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Virginia Tech English Club.">
 	<title>English Club Home Page</title>
-	<link href="_css/styles.css" rel="stylesheet" type="text/css">
+	<link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
 	<header>
 		<h1>Find us on social media:</h1>
-		<a href="https://www.facebook.com/vtenglishclub15">Facebook</a>
-		<a href="https://twitter.com/vt_english_club">Twitter</a>
-		<a href="https://www.instagram.com/vt_english_club/?hl=en">Instagram</a>
-		<p>Shanks Hall<br>
-		181 Turner St, NW<br>
-		Blacksburg, VA 24060<br>
-		United States<br>
-		Phone Number:(540) 231-6515<br></p>
-		<hr>
+		<a href="https://www.facebook.com/vtenglishclub15" target="_blank">Facebook</a>
+		<a href="https://twitter.com/vt_english_club" target="_blank">Twitter</a>
+		<a href="https://www.instagram.com/vt_english_club/?hl=en" target="_blank">Instagram</a>
+		<a href="https://goo.gl/FACi5s" target="_blank">Shanks Hall | 181 Turner St, NW </a>
+		<a href="tel:5402316515">(540) 231-6515</a>
 	</header>
 
 
 	<nav>
 		<ul>
 			<li id="in_use">Home</li>
-			<li><a href="events.html">Events</a></li>
-			<li><a href="books.html">Book of the Month</a></li>
-			<li><a href="gallery.html">Gallery</a></li>
-			<li><a href="news.html">News</a></li>
+			<li id="events"><a href="events.html">Events</a></li>
+			<li id="botm"><a href="books.html">Book of the Month</a></li>
+			<li id="gallery"><a href="gallery.html">Gallery</a></li>
+			<li id="news"><a href="news.html">News</a></li>
 		</ul>
 	</nav>
-	
-	
+
+
 	<div id="main">
-		<h1>Who we are</h1>
-		<p>VT English Club is for students interested in English,whether that be writing or reading, to come together to make friends and share interests. 
-		We hope to encourage involvement in the department and the Blacksburg community. We also provide students the opportunity to meet and work with 
-		various faculty members throughout the department in various projects. Each month, we invite a professor or professors to a meeting to discuss 
-		their research and upcoming courses they'll be teaching. We also hold two annual events, the professor breakfast and trivia night, which gives 
+		<h1>VT <br/>English <br/>Club <br/></h1>
+		<h2>Who we are</h2>
+		<p>VT English Club is for students interested in English,whether that be writing or reading, to come together to make friends and share interests.
+		We hope to encourage involvement in the department and the Blacksburg community. We also provide students the opportunity to meet and work with
+		various faculty members throughout the department in various projects. Each month, we invite a professor or professors to a meeting to discuss
+		their research and upcoming courses they'll be teaching. We also hold two annual events, the professor breakfast and trivia night, which gives
 		students an opportunity to know their professors in a casual setting.</p>
-		
-		<p>The English Club plans to become involved with the NRV reading hour this upcoming year, as well as continue to participate in Trunk or Treat 
+
+		<p>The English Club plans to become involved with the NRV reading hour this upcoming year, as well as continue to participate in Trunk or Treat
 		and the Angel Tree Program. Each spring, we also have our own team for The Big Event, as well as Relay for Life.</p>
 
-		<p>Overall, our club's goal is also to create friendships, so we plan various excursions for our members to enjoy together. 
+		<p>Overall, our club's goal is also to create friendships, so we plan various excursions for our members to enjoy together.
 		This year, we are planning on attending a play at the American Shakespeare Center and visiting the Green Valley Book Fair.<br><br>
-		The English Club also works in partnership with the English Honor Society, Sigma Tau Delta.</p> 
-	
+		The English Club also works in partnership with the English Honor Society, Sigma Tau Delta.</p>
+
 		<h2>Calendar placeholder</h2>
-	
-	
+
+
 	</div>
 
 
