--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<a href="https://www.facebook.com/vtenglishclub15" target="_blank">Facebook</a>
 		<a href="https://twitter.com/vt_english_club" target="_blank">Twitter</a>
 		<a href="https://www.instagram.com/vt_english_club/?hl=en" target="_blank">Instagram</a>
-		<a href="https://goo.gl/FACi5s" target="_blank">Shanks Hall | 181 Turner St, NW </a>
+		<a href="https://goo.gl/FACi5s" target="_blank">373/380 Shanks Hall | 181 Turner St, NW </a>
 		<a href="tel:5402316515">(540) 231-6515</a>
 	</header>
 
@@ -51,9 +51,6 @@
 
 
 	</div>
-
-
-
 
 
 </body>
