--- a/index.html
+++ b/index.html
@@ -12,27 +12,28 @@
 
 	<header>
 		<h1>Find us on social media:</h1>
-		<a href="https://www.facebook.com/vtenglishclub15" target="_blank">Facebook</a>
-		<a href="https://twitter.com/vt_english_club" target="_blank">Twitter</a>
-		<a href="https://www.instagram.com/vt_english_club/?hl=en" target="_blank">Instagram</a>
-		<a href="https://goo.gl/FACi5s" target="_blank">373/380 Shanks Hall | 181 Turner St, NW </a>
+		<a href="https://www.facebook.com/vtenglishclub15" target="_blank">Facebook | </a>
+		<a href="https://twitter.com/vt_english_club" target="_blank">Twitter | </a>
+		<a href="https://www.instagram.com/vt_english_club/?hl=en" target="_blank">Instagram | </a>
+		<a href="https://goo.gl/FACi5s" target="_blank">373/380 Shanks Hall (181 Turner St, NW) | </a>
 		<a href="tel:5402316515">(540) 231-6515</a>
 	</header>
 
 
 	<nav>
 		<ul>
-			<li id="in_use">Home</li>
-			<li id="events"><a href="events.html">Events</a></li>
-			<li id="botm"><a href="books.html">Book of the Month</a></li>
-			<li id="gallery"><a href="gallery.html">Gallery</a></li>
-			<li id="news"><a href="news.html">News</a></li>
+			<li id="in_use"><a href="#home">Home</li>
+			<li id="events"><a href="#eventsPage">Events</a></li>
+			<li id="botm"><a href="#botmPage">Book of the Month</a></li>
+			<li id="gallery"><a href="#galleryPage">Gallery</a></li>
+			<li id="news"><a href="#newsPage">News</a></li>
 		</ul>
 	</nav>
 
 
 	<div id="main">
-		<h1>VT <br/>English <br/>Club <br/></h1>
+		<div class="anchor" id="home">
+		<h1>VT <br/>English </br> Club <br/></h1>
 		<h2>Who we are</h2>
 		<p>VT English Club is for students interested in English,whether that be writing or reading, to come together to make friends and share interests.
 		We hope to encourage involvement in the department and the Blacksburg community. We also provide students the opportunity to meet and work with
@@ -46,10 +47,62 @@
 		<p>Overall, our club's goal is also to create friendships, so we plan various excursions for our members to enjoy together.
 		This year, we are planning on attending a play at the American Shakespeare Center and visiting the Green Valley Book Fair.<br><br>
 		The English Club also works in partnership with the English Honor Society, Sigma Tau Delta.</p>
+	</div>
 
-		<h2>Calendar placeholder</h2>
+	<div class="anchor" id="eventsPage">
+		<h1>Upcoming events</h1>
+		<p><span class="date">December 1</span>: Poetry in the Waiting Room meeting and planning for Spring semester.</p>
+		<p><span class="date">December 8</span>: Reading Day Event in Shanks 370/380 from 11am-5pm.<p>
 
 
+
+		<h2>Past events</h2>
+		<p><span class="date">November 15</span>: American Indian Read-In from 12pm-4pm.</p>
+		<p><span class="date">November 14</span>: Professor Breakfast in Shanks 380 from 8:30am-11am</p>
+		<p><span class="date">November 13</span>: Autumn Valley Voices Reading at Blacksburg Public Library.</p>
+		<p><span class="date">November 10</span>: Cringefest in Newman Multipurpose Room at 6pm.</p>
+		<p><span class="date">November 3-4</span>: English Career Connections Fair</p>
+	</div>
+
+	<div class="anchor" id="botmPage">
+		<h1>Book of the Month</h1>
+
+		<h2>November</h2>
+		<h3>The Night Circus by Erin Morgenstern</h3>
+		<blockquote>"Will insert quote here soon."–Rachel Hargrave, English Club Member</blockquote>
+
+		<h2>October</h2>
+		<h3>A Moveable Feast by Ernest Hemingway</h3>
+		<blockquote>
+		“Rarely are readers allowed into into the mind of a literary genius, making this peek into thoughts of a young Ernest Hemingway by his older self, unmissable. Studded with a constellation of the brightest stars in the Modernist era, the book is filled with the brightness of a roaring, lost Paris reborn after a World War but tinted with the foreknowledge of the older, authorial voice. Hemingway is at his best when writing what he knows, and he certainly knows himself.
+		As the title suggests, the novel is written in easily digested vignettes: a feast of words. It’s perfect for reading while waiting for the bus or in between classes.” –Amelia Dirks, Vice President of the English Club
+		</blockquote>
+	</div>
+
+	<div class="anchor" id="galleryPage">
+		<h1>Gallery</h1>
+	</div>
+
+	<div class="anchor" id="newsPage">
+		<h1>Current news</h1>
+		<h2>Poetry in the Waiting Room</h2>
+		<p>The English Club is putting together poems for a pamphlet to be available in local hospitals. The poems in the pamphlets are designed to help family and friends of patients in hospitals to find comfort through words.</p>
+		<h2>Semester Wrap Up Meeting</h2>
+		<p>We will be holding a final meeting of the semester on December 1st in order to discuss plans for the Spring. Make sure to bring ideas on what events you want to see happen!</p>
+
+		<!-- We may not actually need to keep past news up, but it's a nice way of letting people know what sorts of things the club's discussed in
+		the past. -->
+		<h1>Past news</h1>
+		<h2>Faculty Breakfast</h2>
+		<p>On November 14th English Club showed our appreciation for the faculty and staff in the English Department with homemade muffins and coffee in Shanks 380.</p>
+		<h2>English Career Connections Fair</h2>
+		<p>English Club assisted in setting up and orchestrating the English Career Connections Fair, which allowed undergraduate students to connect with members of the Distinguished Alumni Board.</p>
+	</div>
+
+
+
+		<h2>Calendar</h2>
+	<iframe src="https://calendar.google.com/calendar/embed?showNav=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=300&amp;wkst=1&amp;bgcolor=%23990000&amp;src=vt.edu_61sn9oussag2l0vrcmlgi0h03k%40group.calendar.google.com&amp;color=%23992e2e&amp;ctz=America%2FNew_York" style="border:solid 1px #777" width="400" height="300" frameborder="0" scrolling="no"></iframe>
 	</div>
 
 
