--- a/index.html
+++ b/index.html
@@ -10,16 +10,6 @@
 
 <body>
 
-	<header>
-		<h1>Find us on social media:</h1>
-		<a href="https://www.facebook.com/vtenglishclub15" target="_blank">Facebook | </a>
-		<a href="https://twitter.com/vt_english_club" target="_blank">Twitter | </a>
-		<a href="https://www.instagram.com/vt_english_club/?hl=en" target="_blank">Instagram | </a>
-		<a href="https://goo.gl/FACi5s" target="_blank">373/380 Shanks Hall (181 Turner St, NW) | </a>
-		<a href="tel:5402316515">(540) 231-6515</a>
-	</header>
-
-
 	<nav>
 		<ul>
 			<li id="in_use"><a href="#home">Home</li>
@@ -108,5 +98,15 @@
 
 
 					</body>
+
+					<footer>
+						<h1>Find us on social media:</h1>
+						<a href="https://www.facebook.com/vtenglishclub15" target="_blank">Facebook | </a>
+						<a href="https://twitter.com/vt_english_club" target="_blank">Twitter | </a>
+						<a href="https://www.instagram.com/vt_english_club/?hl=en" target="_blank">Instagram | </a>
+						<a href="https://goo.gl/FACi5s" target="_blank">373/380 Shanks Hall (181 Turner St, NW) | </a>
+						<a href="tel:5402316515">(540) 231-6515</a>
+					</footer>
+
 
 					</html>
