--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 		<div id="main">
-			<div class="anchor" id="home">
+			<div id="home">
 				<h1>VT <br/>English </br> Club <br/></h1>
 				<h2>Who we are</h2>
 				<p>VT English Club is for students interested in English,whether that be writing or reading, to come together to make friends and share interests.
@@ -39,7 +39,7 @@
 							The English Club also works in partnership with the English Honor Society, Sigma Tau Delta.</p>
 						</div>
 
-						<div class="anchor" id="eventsPage">
+						<div  id="eventsPage">
 							<h1>Upcoming events</h1>
 							<p><span class="date">December 1</span>: Poetry in the Waiting Room meeting and planning for Spring semester.</p>
 							<p><span class="date">December 8</span>: Reading Day Event in Shanks 370/380 from 11am-5pm.<p>
@@ -54,7 +54,7 @@
 								<p><span class="date">November 3-4</span>: English Career Connections Fair</p>
 							</div>
 
-							<div class="anchor" id="botmPage">
+							<div  id="botmPage">
 								<h1>Book of the Month</h1>
 
 								<h2>November</h2>
@@ -69,12 +69,12 @@
 								</blockquote>
 							</div>
 
-							<div class="anchor" id="galleryPage">
+							<div  id="galleryPage">
 								<h1>Gallery</h1>
 								<img src="http://placehold.it/800x300">
 							</div>
 
-							<div class="anchor" id="newsPage">
+							<div  id="newsPage">
 								<h1>Current news</h1>
 								<h2>Poetry in the Waiting Room</h2>
 								<p>The English Club is putting together poems for a pamphlet to be available in local hospitals. The poems in the pamphlets are designed to help family and friends of patients in hospitals to find comfort through words.</p>
